--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -9,7 +9,7 @@
   <body>
     
     <%- include('nav') %> 
-    <div class="container-fluid">
+    <div class="container">
     <%- body %> 
     </div>
 
