--- a/views/layouts/nav.ejs
+++ b/views/layouts/nav.ejs
@@ -1,8 +1,22 @@
-<h1><%= title %> </h1>
-<h3>links</h3>
-<ul>
-    <li><a href="/">Home</a></li>
-    <li><a href="/about">About</a></li>
-    <li><a href="/books">Books</a></li>
-    <li><a href="/product">Product</a></li>
-</ul>
+<nav class="navbar navbar-expand-lg bg-secondary">
+    <div class="container">
+      <a class="navbar-brand" href="/">Home</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/books">Daftar Buku</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about">About us</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+</nav>
+
+<div class="container">
+    <h1><%= title %> </h1>
+</div>
